Fixed vimeo thumbnail not showing  up

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -359,6 +359,10 @@ a,input,button,select,textarea {
 			img.image-size-ref {
 				visibility: hidden;
 			}
+			.outer-video-wrap {
+				width: 100%;
+				height: 100%;
+			}
 			.videoIframeDiv {
 				width: 100%;
 				height: 100%;
